--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "next dev",
+    "lint": "next lint",
+    "migrate": "ley --require tsm",
+    "start": "next start"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
+    "ley": "^0.8.1",
     "next": "latest",
     "postgres": "^3.3.5",
     "react": "latest",
@@ -17,7 +19,8 @@
     "sass": "^1.68.0",
     "secure-json-parse": "^2.7.0",
     "server-only": "^0.0.1",
-    "sharp": "^0.32.6"
+    "sharp": "^0.32.6",
+    "tsm": "^2.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.23",
