--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.0.0",
     "dotenv": "^16.3.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "ley": "^0.8.1",
     "next": "latest",
     "postgres": "^3.3.5",
@@ -23,6 +27,7 @@
     "tsm": "^2.3.0"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
     "@types/react": "^18.2.23",
     "@types/react-dom": "^18.2.7",
     "eslint-config-upleveled": "^5.0.5",
