--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
     "start": "next start"
   },
   "dependencies": {
-    "@testing-library/jest-dom": "^6.1.3",
-    "@testing-library/react": "^14.0.0",
     "dotenv": "^16.3.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
@@ -28,9 +26,10 @@
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
+    "@playwright/test": "^1.38.1",
+    "@types/node": "^20.8.4",
     "@types/react": "^18.2.23",
     "@types/react-dom": "^18.2.7",
-    "@types/testing-library__jest-dom": "^6.0.0",
     "eslint-config-upleveled": "^5.0.5",
     "stylelint": "^15.10.3",
     "stylelint-config-upleveled": "^1.0.2",
