--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@types/node": "^20.8.4",
     "@types/react": "^18.2.23",
     "@types/react-dom": "^18.2.7",
+    "autoprefixer": "^10.4.16",
     "eslint-config-upleveled": "^5.1.0",
+    "postcss": "^8.4.31",
     "stylelint": "^15.10.3",
     "stylelint-config-upleveled": "^1.0.2",
     "typescript": "^5.2.2"
