--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "next.js-ecommerce-store",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "next build",
     "dev": "next dev",
@@ -27,14 +28,19 @@
   "devDependencies": {
     "@jest/globals": "^29.7.0",
     "@playwright/test": "^1.38.1",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20.8.4",
     "@types/react": "^18.2.23",
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "^10.4.16",
-    "eslint-config-upleveled": "^5.1.0",
+    "daisyui": "^3.9.3",
+    "eslint-config-upleveled": "^7.3.3",
     "postcss": "^8.4.31",
+    "prettier-plugin-embed": "^0.3.0",
+    "prettier-plugin-sql": "^0.17.0",
     "stylelint": "^15.10.3",
-    "stylelint-config-upleveled": "^1.0.2",
+    "stylelint-config-upleveled": "^1.0.3",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2"
   }
 }
